[workspace]
members = ["."]
resolver = "2"

[package]
name = "hexagonal_architecture"
version = "0.1.0"
edition = "2021"

[dependencies]
router_core = { path = "./core", package = "core" }

serde_json = "1"
actix-web = "4"
anyhow = "1"
dotenv = "0.15"
envconfig = "0.10"
async-trait = "0.1"

[dev-dependencies]
actix-http = "3"
