[package]
name = "benchmarker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
router = { version = "0.2.0", path = "../router", features = [ "kms" ] }
api_models = { version = "0.1.0", path = "../api_models", features = ["errors"] }
common_utils = { version = "0.1.0", path = "../common_utils", features = ["signals", "async_ext"] }
cards = { version = "0.1.0", path = "../cards" }
external_services = { version = "0.1.0", path = "../external_services", features = [ "kms" ] }
masking = { version = "0.1.0", path = "../masking" }
redis_interface = { version = "0.1.0", path = "../redis_interface" }
router_derive = { version = "0.1.0", path = "../router_derive" }
router_env = { version = "0.1.0", path = "../router_env", features = ["log_extra_implicit_fields", "log_custom_entries_to_extra"] }
storage_models = { version = "0.1.0", path = "../storage_models", features = ["kv_store"] }


[dev-dependencies]
tokio = "1.27.0"
uuid = { version = "1.3.1", features = ["serde", "v4"] }
criterion = { version = "0.4", features = [ "async_tokio" ] }


[[bench]]
name = "database"
harness = false

[[bench]]
name = "redis"
harness = false

[[bench]]
name = "kms"
harness = false

