[package]
name = "cards"
description = "Types to handle card masking and validation"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
readme = "README.md"
license.workspace = true

[features]

[dependencies]
error-stack = "0.3.1"
luhn = "1.0.1"
serde = { version = "1.0.163", features = ["derive"] }
thiserror = "1.0.40"
time = "0.3.21"

# First party crates
common_utils = { version = "0.1.0", path = "../common_utils" }
masking = { version = "0.1.0", path = "../masking" }

[dev-dependencies]
serde_json = "1.0.96"
