[package]
name = "cbr_macros"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.79"
quote = "1.0.35"
rustc-hash = "1.1.0"
strum = { version = "0.26", features = ["derive"] }
syn = "2.0.57"
rust_decimal = "1.35"
rusty-money = { git = "https://github.com/varunsrin/rusty_money", rev = "bbc0150742a0fff905225ff11ee09388e9babdcc", features = ["iso", "crypto"] }

[lints]
workspace = true
