[package]
name = "common_enums"
description = "Enums shared across the request/response types and database types"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
readme = "README.md"
license.workspace = true

[features]
dummy_connector = []
openapi = []
payouts = []

[dependencies]
diesel = { version = "2.1.5", features = ["postgres"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
strum = { version = "0.26", features = ["derive"] }
utoipa = { version = "3.5.0", features = ["preserve_order", "preserve_path_order"] }

# First party crates
router_derive = { version = "0.1.0", path = "../router_derive" }

[dev-dependencies]
serde_json = "1.0.114"
