[package]
name = "common_enums"
description = "Enums shared across the request/response types and database types"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
readme = "README.md"
license.workspace = true

[features]
dummy_connector = []
openapi = []
payouts = []

[dependencies]
config = { version = "0.14.0", features = ["toml"] }
thiserror = "1.0.58"
actix-web = "4.5.1"
mime = "0.3.17"
http = "0.2.12"
diesel = { version = "2.1.5", features = ["postgres"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
strum = { version = "0.26", features = ["derive"] }
utoipa = { version = "4.2.0", features = ["preserve_order", "preserve_path_order"] }
frunk = "0.4.2"
frunk_core = "0.4.2"

# First party crates
router_derive = { version = "0.1.0", path = "../router_derive" }

[dev-dependencies]
serde_json = "1.0.115"
