[package]
name = "config_importer"
description = "Utility to convert a TOML configuration file to a list of environment variables"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
readme = "README.md"
license.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
anyhow = "1.0.81"
clap = { version = "4.4.18", default-features = false, features = ["std", "derive", "help", "usage"] }
indexmap = { version = "2.2.6", optional = true }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
toml = { version = "0.8.12", default-features = false, features = ["parse"] }

[features]
default = ["preserve_order"]
preserve_order = ["dep:indexmap", "serde_json/preserve_order", "toml/preserve_order"]
