[package]
name = "connector_configs"
description = "Connector Integration Dashboard"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
default = ["payouts", "dummy_connector"]
production = []
development = []
sandbox = []
dummy_connector = ["api_models/dummy_connector", "development"]
payouts = ["api_models/payouts"]

[dependencies]
api_models = { version = "0.1.0", path = "../api_models", package = "api_models" }
serde = { version = "1.0.197", features = ["derive"] }
serde_with = "3.7.0"
toml = "0.8.12"
utoipa = { version = "3.5.0", features = ["preserve_order", "preserve_path_order"] }
