[package]
name = "core_types"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# First party crates
router_derive = { version = "0.1.0", path = "../router_derive" }
storage_impl = { version = "0.1.0", path = "../storage_impl" }
common_utils = { version = "0.1.0", path = "../common_utils" }
common_enums = { version = "0.1.0", path = "../common_enums" }
masking = { version = "0.1.0", path = "../masking" }
api_models = { version = "0.1.0", path = "../api_models" }

# Third party crates
serde = "1.0.197"
http = "0.2.12"
bytes = "1.6.0"
serde_json = "1.0.115"
