[package]
name = "currency_conversion"
description = "Currency conversion for cost based routing"
version = "0.1.0"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
# First party crates
common_enums = { version = "0.1.0", path = "../common_enums", package = "common_enums" }

# Third party crates
rust_decimal = "1.29"
rusty-money = { version = "0.4.0", features = ["iso", "crypto"] }
serde = { version = "1.0.193", features = ["derive"] }
thiserror = "1.0.43"
